# rdma-rs

./: Cargo.toml  build.rs
client/: Cargo.toml
client/src/: grpc_client.rs  main.rs  rdma_client.rs
client/src/connection_manager/: connection_manager.rs
protos/: connection_manager.proto
server/: Cargo.toml  build.rs
server/pkg/mod/cache/download/golang.org/x/mod/@v/: list
server/pkg/mod/cache/download/golang.org/x/tools/@v/: v0.23.0.info
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/!burnt!sushi/: toml@v1.2.1
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/golang/: vscode-go@v0.41.4
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/google/: go-cmp@v0.6.0
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/: mod@v0.12.0  mod@v0.14.0  mod@v0.18.0  sync@v0.7.0  sys@v0.11.0  telemetry@v0.0.0-20240116212745-88e2d1c7f9a2  telemetry@v0.0.0-20240607193123-221703e18637  text@v0.16.0  tools@v0.12.1-0.20230825192346-2191a27a6dc5  tools@v0.22.1-0.20240628205440-9c895dd76b34  tools@v0.23.0  vuln@v1.0.4
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/exp/: typeparams@v0.0.0-20221208152030-732eee02a75a  typeparams@v0.0.0-20221212164502-fae10dda9338
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/telemetry/: config@v0.25.0
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.16.1
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/honnef.co/go/: tools@v0.4.7
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/mvdan.cc/: gofumpt@v0.6.0
server/pkg/mod/cache/download/sumdb/sum.golang.org/lookup/mvdan.cc/xurls/: v2@v2.5.0
server/pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x110/: 870  874  875  877  881  882
server/pkg/sumdb/sum.golang.org/: latest
server/src/: grpc_server.rs  main.rs  qp.rs  rdma_server.rs  server_manager.rs
server/src/connection_manager/: connection_manager.rs  mod.rs
src/: common.rs
(+9 files in other folders)
