[package]
name = "rdma-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "client",
    "server"
]

[lib]
name = "common"
path = "src/common.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
libc = "0.2.155"
rdma-sys = "0.3.0"
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.6"
tokio-stream = "0.1.15"
portpicker = "0.1.1"
async-stream = "0.3.5"
byte-unit = "5.1.4"
