[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
rdma-rs = { path = "../" }
libc = "0.2.155"
tonic = "0.11.0"
rdma-sys = "0.3.0"
prost = "0.12.6"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
portpicker = "0.1.1"
async-stream = "0.3.5"
byteorder = "1.5.0"
pnet = "0.35.0"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = "0.11.0"
